fix : eslintrc.json rule 추가
클론 후 재시작 해보니 arrow function 적용이 잘 안되서 룰 추가해봤습니다.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,7 +15,7 @@
   "rules": {
     "react/function-component-definition": [
       2,
-      { "namedcomponents": "arrow-function" }
+      { "namedComponents": ["arrow-function", "function-declaration"] }
     ]
   }
 }
