test: Home에 Profile 컴포넌트 추가
- Home에 Profile 컴포넌트 추가
- vscode 디버깅 빌드 -> gitignore에 launch.json 추가
- package.json은 갑자기 포매팅 적용되어 자동 수정됨
ECOPERCENT-204

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-.gitmessage.txt
 ### macOS ###
 # General
 .DS_Store
@@ -56,4 +55,6 @@ ecopercent/node_modules
 dist
 dist/*
 .idea
+.gitmessage.txt
+launch.json
 # End of https://www.toptal.com/developers/gitignore/api/react,macos
