--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,22 +1,38 @@
 {
-  "env": {
-    "browser": true,
-    "es2021": true,
-    "node": true
-  },
-
-  "extends": ["plugin:react/recommended", "airbnb", "prettier"],
-  "overrides": [],
-  "parserOptions": {
-    "ecmaVersion": "latest",
-    "sourceType": "module"
-  },
-  "plugins": ["react"],
-  "rules": {
-    "react/function-component-definition": [
-      2,
-      { "namedComponents": ["arrow-function", "function-declaration"] }
-    ],
-    "arrow-body-style": ["error", "always"]
-  }
+	"env": {
+		"browser": true,
+		"es2021": true,
+		"node": true
+	},
+	"extends": [
+		"plugin:react/recommended",
+		"airbnb",
+		"prettier"
+	],
+	"overrides": [],
+	"parserOptions": {
+		"ecmaVersion": "latest",
+		"sourceType": "module"
+	},
+	"plugins": [
+		"react"
+	],
+	"rules": {
+		"react/function-component-definition": [
+			2,
+			{
+				"namedComponents": [
+					"arrow-function",
+					"function-declaration"
+				]
+			}
+		],
+		"arrow-body-style": [
+			"error",
+			"always"
+		],
+		// tmp rules. plan to use Typescript
+		"react/prop-types": 1,
+		"react/button-has-type": 1
+	}
 }
