--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,6 +33,12 @@
 		],
 		// tmp rules. plan to use Typescript
 		"react/prop-types": 1,
-		"react/button-has-type": 1
+		"react/button-has-type": 1,
+		"jsx-a11y/label-has-associated-control": [
+			2,
+			{
+			  "labelAttributes": ["htmlFor"]
+			}
+		  ]
 	}
 }
