--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@emotion/styled": "^11.10.6",
 		"@loadable/component": "^5.15.3",
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.4.0",
@@ -11,7 +12,7 @@
 		"prettier": "^2.8.4",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"react-query": "^3.39.3",
+		"react-icons": "^4.8.0",
 		"react-router-dom": "^6.8.2",
 		"react-scripts": "^5.0.1",
 		"web-vitals": "^2.1.4"
