build: react-query 사용환경 리세팅
- ssia
ECOPERCENT-183

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,14 +31,14 @@
 			"error",
 			"always"
 		],
-		// tmp rules. plan to use Typescript
-		"react/prop-types": 1,
-		"react/button-has-type": 1,
 		"jsx-a11y/label-has-associated-control": [
 			2,
 			{
 			  "labelAttributes": ["htmlFor"]
 			}
-		  ]
+		],
+		// tmp rules. plan to use Typescript
+		"react/prop-types": 1,
+		"react/button-has-type": 1
 	}
 }
