--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
 		"axios": "^1.3.4",
+		"browser-image-compression": "^2.0.2",
 		"loadable": "^1.0.0",
 		"prettier": "^2.8.4",
 		"react": "^18.2.0",
