--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@emotion/react": "^11.10.6",
 		"@emotion/styled": "^11.10.6",
 		"@loadable/component": "^5.15.3",
 		"@tanstack/react-query": "^4.26.1",
