--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
 		"@emotion/styled": "^11.10.6",
 		"@loadable/component": "^5.15.3",
 		"@tanstack/react-query": "^4.26.1",
-		"@tanstack/react-query-devtools": "^4.26.1",
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
@@ -55,7 +54,8 @@
 		"eslint-plugin-import": "^2.27.5",
 		"eslint-plugin-jsx-a11y": "^6.7.1",
 		"eslint-plugin-react": "^7.32.2",
-		"eslint-plugin-react-hooks": "^4.6.0"
+		"eslint-plugin-react-hooks": "^4.6.0",
+		"@tanstack/react-query-devtools": "^4.26.1"
 	},
 	"proxy": "http://localhost:8080"
 }
