--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "loadable": "^1.0.0",
     "prettier": "^2.8.4",
     "react": "^18.2.0",
+    "react-cookies": "^0.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-responsive": "^9.0.2",
