fix: craco 빌드 오류 해결을 위한  eslintrc 룰 추가

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -39,6 +39,7 @@
 		],
 		// tmp rules. plan to use Typescript
 		"react/prop-types": 1,
-		"react/button-has-type": 1
+		"react/button-has-type": 1,
+		"import/no-unresolved": "off"
 	}
 }
