--- a/jsconfig.json
+++ b/jsconfig.json
@@ -9,7 +9,7 @@
       "@pages/*": ["src/pages/*"],
       "@style/*": ["src/style/*"],
       "@util/*": ["src/utils/*"],
-      "@modal/*": ["src/components/Modal/*"]
+      "@modal/*": ["src/components/modal/*"]
     }
   }
 }
